--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,15 @@
         <activity android:name=".activity.ContactsActivity" />
         <activity android:name=".MentorsActivity" />
         <activity android:name=".IconTextTabsActivity" />
-        <activity android:name=".activity.ProfileActivity" />
+        <activity
+            android:name=".activity.ProfileActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".activity.PlacesActivity" />
         <activity android:name=".activity.AbuseActivity" />
         <activity android:name=".activity.SosActivity" />
         <activity android:name=".activity.SupportGroups" />
-        <activity android:name=".MentorProfileActivity"></activity>
+        <activity android:name=".MentorProfileActivity" />
+        <activity android:name=".activity.SosDetailsActivity"></activity>
     </application>
 
 </manifest>
