--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,12 @@
         <activity android:name=".activity.SosActivity" />
         <activity android:name=".activity.SupportGroups" />
         <activity android:name=".MentorProfileActivity" />
-<<<<<<< HEAD
         <activity android:name=".activity.SosDetailsActivity" />
-        <activity android:name=".TestomoniesActivity"></activity>
-=======
-        <activity android:name=".activity.ChatActivity"></activity>
->>>>>>> master
+        <activity
+            android:name=".activity.TestomoniesActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activity.ChatActivity" />
+        <activity android:name=".EventsActivity"></activity>
     </application>
 
 </manifest>
