--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,11 @@
             android:name=".activity.TestomoniesActivity"
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.ChatActivity" />
-        <activity android:name=".EventsActivity"></activity>
+        <activity android:name=".EventsActivity" />
+        <activity android:name=".activity.MediaActivity" />
+        <activity android:name=".activity.MoviesActivity" />
+        <activity android:name=".activity.VideoActivity" />
+        <activity android:name=".activity.BooksActivity"></activity>
     </application>
 
 </manifest>
