--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity android:name=".activity.MediaActivity" />
         <activity android:name=".activity.MoviesActivity" />
         <activity android:name=".activity.VideoActivity" />
-        <activity android:name=".activity.BooksActivity"></activity>
+        <activity android:name=".activity.BooksActivity" />
     </application>
 
 </manifest>
