Updated mentors activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.irinnovative.onepagesigninsignup">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -44,6 +44,7 @@
         <activity android:name=".activity.MoviesActivity" />
         <activity android:name=".activity.VideoActivity" />
         <activity android:name=".activity.BooksActivity" />
+        <activity android:name=".SocialMediaActivity"></activity>
     </application>
 
 </manifest>
