--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,11 @@ dependencies {
     compile 'com.github.Hitomis:CircleMenu:v1.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.github.ehehhh:Gooey-Loader:v1.1.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
 
