--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
             android:name=".activity.NavigationActivity"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar.FullScreen" />
-        <activity android:name=".activity.About" />
+        <activity android:name=".activity.About"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".activity.AbuseTypeActivity"
             android:theme="@style/AppTheme" />/>
