--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity
             android:name=".activity.ProfileActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activity.PlacesActivity" />
+        <activity android:name=".activity.PlacesActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".activity.AbuseActivity"
             android:theme="@style/AppTheme" />
