--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,15 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://maven.google.com" }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'io.fabric.tools:gradle:1.24.4'
     }
 }
 
@@ -21,7 +23,6 @@ allprojects {
         maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io"}
         maven { url 'https://dl.bintray.com/spark/maven' }
-        maven {url"https://jitpack.io"}
 
     }
 }
